welcome.lessons.welcome.variables.Variables.scala.code
var nbPas=0
while(!surBiscuit){avance();prendBiscuit();porteBiscuit();nbPas=nbPas+1;}
var dejaFait=0
while(dejaFait<nbPas){recule();}